# azure-ai-tooling

./: .gitignore  pyproject.toml  requirements.txt
.py-conf/: conf-image.ps1
src/: main.py
src/tools/: main.py
src/tools/ado_analytics/: ado.py  function_app.py
src/tools/ai_queries/: generate.py  schemas.py  system_message.py
src/tools/data_ingestion/ado_analytics/: ado_mapping example.txt  schemas.py
src/tools/document_management/: extract.py
src/tools/indexing/: index_manager.py  schema_mapper.py  schemas.py
src/tools/research/: index_management.py  operate.py  schemas.py
